--- a/my-profile/index.html
+++ b/my-profile/index.html
@@ -14,27 +14,28 @@
    	     <h1>Hey, I'm Cloé ;)</h1>
          <img src="images/profile.jpg" class="img-circle" widht="100px alt"="Cloé Larue"
 
+
           <p> 
             I love travelling all around the world and watching series on netflix. My hobbies are sports and drawing. 
           <p>
           <a href="#" class="btn-blue">Discover Le Wagon</a>
    	 </div>
    	 <div class="card-white">
-           <h2>travels</h2>
+           <h2>Travels</h2>
            <p>
-              I am passionate by travel. I have visited several countries like US, Thailand and Bali. 
+              I am passionate by travels. I have visited several countries like US, Thailand and Bali. One of my favorite place is Miami, the environment and the people are amazing. This is a place I recommend you to visit !
             </p>
    	 </div>
      <div class="card-white">
-           <h2>series</h2>
+           <h2>Series</h2>
            <p>
-              I am passionate about series. One of my favorite serie is Prison Break. 
+              I love watching series. One of my favorite serie is Prison Break, I like the suspens and the characters.
             </p>
      </div>
      <div class="card-white">
-          <h2>sport</h2>
+          <h2>Sport</h2>
           <p>
-             I am passionate about rugby. I have been practising rugby since nine years. I also practised handball two years ago. 
+             I am passionate about rugby. I have been practising rugby since nine years. We have won the French champion league in 2019. I also practised handball two years ago. 
           </p>
      </div>
      <div class="card-white">
